src/base/objects/Node__c/Node__c.object-meta.xml
<CustomObject>
    <description>This is the given node offering of a given protocol.</description>
    <label>Node</label>
    <nameField>
        <label>Node</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>