src/base/objects/Node__c/fields/Base_Node_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Node_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the standard price we charge for this node.</description>
    <label>Base Node Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>