src/base/objects/Node__c/fields/Delegation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Delegation_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The percentage of rewards the user is paying Bison Trails to delegate to a BT node.</description>
    <label>Delegation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>