src/base/objects/Node__c/fields/Node_Family__c.field-meta.xml
<CustomField>
    <fullName>Node_Family__c</fullName>
    <description>This is the type of node in the format {Protocol-Node Type}</description>
    <inlineHelpText>{Protocol-Node Type}</inlineHelpText>
    <label>Node Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Coinbase Pay SDK</fullName>
            </value>
            <value>
                <fullName>Delegation</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
            </value>
            <value>
                <fullName>Participation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>