src/base/objects/Node__c/fields/Participatory_Fee__c.field-meta.xml
<CustomField>
    <fullName>Participatory_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the participation fee. Only required for Participation nodes.</description>
    <inlineHelpText>Not required for QT. Leave blank.</inlineHelpText>
    <label>Participatory Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>