src/base/objects/Node__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Protocol one which this type of node is run.</description>
    <label>Protocol</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>Nodes</relationshipLabel>
    <relationshipName>Nodes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>