src/base/objects/Node__c/fields/Protocol_Owner__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Owner__c</fullName>
    <formula>Protocol__r.Protocol_Owner__r.FirstName + &quot; &quot; +  Protocol__r.Protocol_Owner__r.LastName</formula>
    <label>Protocol Owner</label>
    <type>Text</type>
</CustomField>